# app/Http/Controllers/OptionController.php
@@ -7,14 +7,53 @@ use Illuminate\Http\Request;
 
 class OptionController extends Controller
 {
-    /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function index()
+    public function __construct()
     {
-        //
+        // $this->middleware('auth:api', ['except' => ['login', 'register']]);
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/api/options",
+     *      operationId="getOptionList",
+     *      tags={"Option System"},
+     *      summary="Get options list by name list",
+     *      description="Returns option list",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *       ),
+     *      @OA\Parameter(
+     *            name="name[]",
+     *            description="array name",
+     *            example="['logo_name', 'logo_path']",
+     *            required=true,
+     *            in="query",
+     *            @OA\Schema(
+     *             type="array",
+     *             @OA\Items(type="string")
+     *           )
+     *        ),
+     *       @OA\Response(response=400, description="Bad request"),
+     *       security={
+     *           {"api_key_security_example": {}}
+     *       }
+     *     )
+     */
+    public function index(Request $request)
+    {
+        // return response()->json($request->name);
+
+        $list = [];
+        foreach ($request->name as $name) {
+            $option = Option::where('name', $name);
+            $list[] = [
+                'name' => $option->name,
+                'value' => $option->value,
+            ];
+        }
+
+        return response()->json($list);
     }
 
     /**
@@ -39,14 +78,35 @@ class OptionController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  \App\Models\Option  $option
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     *      path="/api/options/{name}",
+     *      operationId="getOption",
+     *      tags={"Option System"},
+     *      summary="Get list of option by name",
+     *      description="Returns option",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *       ),
+     *      @OA\Parameter(
+     *            name="name",
+     *            description="logo",
+     *            example="logo_path",
+     *            required=true,
+     *            in="path",
+     *            @OA\Schema(
+     *                type="string"
+     *            )
+     *        ),
+     *       @OA\Response(response=400, description="Bad request"),
+     *       security={
+     *           {"api_key_security_example": {}}
+     *       }
+     *     )
      */
-    public function show(Option $option)
+    public function show($name)
     {
-        //
+        return response()->json(Option::where('name', $name)->first());
     }
 
     /**
